--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -32,7 +32,7 @@ dependencies {
 
     // Architectury API. This is optional, and you can comment it out if you don't need it.
     modImplementation "dev.architectury:architectury-fabric:$rootProject.architectury_api_version"
-
+    include(modImplementation("maven.modrinth:fstats:2023.12.3"))
     common(project(path: ':common', configuration: 'namedElements')) { transitive false }
     shadowBundle project(path: ':common', configuration: 'transformProductionFabric')
 }
