--- a/quilt/build.gradle
+++ b/quilt/build.gradle
@@ -4,6 +4,9 @@ plugins {
 
 repositories {
     maven { url 'https://maven.quiltmc.org/repository/release/' }
+    maven {
+            url "https://api.modrinth.com/maven"
+    }
 }
 
 architectury {
@@ -40,7 +43,7 @@ dependencies {
         exclude group: 'net.fabricmc'
         exclude group: 'net.fabricmc.fabric-api'
     }
-
+    include(modImplementation("maven.modrinth:fstats:2023.12.3"))
     common(project(path: ':common', configuration: 'namedElements')) { transitive false }
     shadowBundle project(path: ':common', configuration: 'transformProductionQuilt')
 }
